# inifilefs

./: Makefile.am  README  configure  configure.ac  libinifilefs.pc.in  syslog-inifilefs.conf
include/: .inifilefs.h.swp  Makefile.am  inifilefs.h
lib/: Makefile.am  inifilefs.c
